Enhance frontend with accessibility improvements, dynamic item loading, and form validation

--- a/frontend11/about.html
+++ b/frontend11/about.html
@@ -27,7 +27,7 @@
     </div>
   </nav>
 
-  <main class="container my-5">
+  <main class="container my-5" role="main">
     <h1 class="mb-4">About Lost and Found</h1>
     <p class="fs-5">
       Lost and Found is a platform designed to help users report lost items and claim found items easily and efficiently.
@@ -36,6 +36,22 @@
     <p class="fs-5">
       This platform is inspired by the Strathmore University theme and aims to provide a seamless experience for all users.
     </p>
+    <section class="mt-4">
+      <h2 class="mb-3 text-danger">Our Values</h2>
+      <ul class="fs-5">
+        <li><strong>Trust:</strong> We ensure that all reported items are handled with care and confidentiality.</li>
+        <li><strong>Accessibility:</strong> Our platform is easy to use for everyone, including those with disabilities.</li>
+        <li><strong>Community:</strong> We foster a supportive environment to help people recover their lost belongings.</li>
+      </ul>
+    </section>
+    <section class="mt-4">
+      <h2 class="mb-3 text-danger">How It Works</h2>
+      <ol class="fs-5">
+        <li>Report your lost item with detailed information.</li>
+        <li>Browse found items reported by others.</li>
+        <li>Contact support for assistance or to claim items.</li>
+      </ol>
+    </section>
   </main>
 
   <footer class="bg-danger text-warning text-center py-3 mt-auto">
