--- a/frontend11/contact.html
+++ b/frontend11/contact.html
@@ -27,7 +27,7 @@
     </div>
   </nav>
 
-  <main class="container my-5">
+  <main class="container my-5" role="main">
     <h1 class="mb-4">Contact Us</h1>
     <p class="fs-5">
       For any inquiries or assistance, please reach out to us using the contact information below.
@@ -37,6 +37,31 @@
       <li><strong>Phone:</strong> +254 700 000 000</li>
       <li><strong>Address:</strong> Strathmore University, Nairobi, Kenya</li>
     </ul>
+    <section class="mt-4">
+      <h2 class="mb-3 text-danger">Send Us a Message</h2>
+      <form id="contactForm" novalidate>
+        <div class="mb-3">
+          <label for="contactName" class="form-label">Name</label>
+          <input type="text" class="form-control" id="contactName" placeholder="Your name" required aria-describedby="contactNameHelp" />
+          <div id="contactNameHelp" class="form-text text-warning">Please enter your full name.</div>
+          <div class="invalid-feedback">Name is required.</div>
+        </div>
+        <div class="mb-3">
+          <label for="contactEmail" class="form-label">Email</label>
+          <input type="email" class="form-control" id="contactEmail" placeholder="Your email" required aria-describedby="contactEmailHelp" />
+          <div id="contactEmailHelp" class="form-text text-warning">We'll never share your email with anyone else.</div>
+          <div class="invalid-feedback">Valid email is required.</div>
+        </div>
+        <div class="mb-3">
+          <label for="contactMessage" class="form-label">Message</label>
+          <textarea class="form-control" id="contactMessage" rows="4" placeholder="Your message" required aria-describedby="contactMessageHelp"></textarea>
+          <div id="contactMessageHelp" class="form-text text-warning">Please enter your message or inquiry.</div>
+          <div class="invalid-feedback">Message is required.</div>
+        </div>
+        <button type="submit" class="btn btn-primary">Send Message</button>
+        <div id="contactFormFeedback" class="mt-3" role="alert" aria-live="polite"></div>
+      </form>
+    </section>
   </main>
 
   <footer class="bg-danger text-warning text-center py-3 mt-auto">
